--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -19,11 +19,7 @@
     margin-top: 15px;
 }
 
-#top .nav
-{
-    /* center navigation pills */
-    display: inline-block;
-}
+
 
 #middle .form-control
 {
@@ -57,7 +53,7 @@
 #overview, td
 {
    color : solid black;
-   border-bottom: 1px solid black;
+   border-bottom: 1.5px solid #00f;
    
 }
 
@@ -86,4 +82,7 @@
 #message
 {
     font-size : 20px;
-}                    
+}    
+ 
+
+                
